[package]
name = "unicorn_hat_hd_2"
edition = "2018"
version = "0.4.1"
authors = ["Harry Stebbins <hcstebbins@gmail.com>"]
description = "Provides an interface to the Pimoroni Unicorn HAT HD on a Raspberry PI"
repository = "https://github.com/hstebbins-stash/unicorn-hat-hd-rs"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pimoroni"]
categories = ["hardware-support"]
exclude = [
    ".vscode/*",
    ".idea/*"
]

[features]
default = ["hardware"]
hardware = ["rppal"]
fake-hardware = ["ansi_term"]

[dependencies]
ansi_term = { version = "0.12.0", optional = true }
failure = "0.1"
rgb = "0.8"
rppal = { version = "0.13.1", optional = true }
